--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai": "^4.3.6",
     "cheerio": "^1.0.0-rc.10",
     "dotenv": "^16.0.0",
     "nodemailer": "^6.7.4",
