--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "test": "mocha"
+    "test": "mocha ./test/"
   },
   "author": "",
   "license": "ISC",
