--- a/package.json
+++ b/package.json
@@ -14,13 +14,9 @@
     "chai": "^4.3.6",
     "cheerio": "^1.0.0-rc.10",
     "dotenv": "^16.0.0",
+    "mocha": "^10.0.0",
     "nodemailer": "^6.7.4",
-    "prompt": "^1.3.0",
-    "prompt-choices": "^5.0.0",
     "prompts": "^2.4.2",
     "puppeteer": "^13.5.2"
-  },
-  "devDependencies": {
-    "mocha": "^9.2.2"
   }
 }
